force-app/main/default/objects/Interface_Parameters__mdt/Interface_Parameters__mdt.object-meta.xml
<CustomObject>
    <description>Endpoints, passwords and so forth for integrations</description>
    <label>Interface Parameters</label>
    <pluralLabel>Interface Parameters</pluralLabel>
</CustomObject>