force-app/main/default/objects/Interface_Parameters__mdt/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <description>Field to store the API key for the interface</description>
    <label>ApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>