force-app/main/default/objects/Interface_Parameters__mdt/fields/BearerToken__c.field-meta.xml
<CustomField>
    <fullName>BearerToken__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>BearerToken will be sent in header part of request to respective interface</description>
    <label>BearerToken</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>