force-app/main/default/objects/Interface_Parameters__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Field to store the endpoint of the interface</description>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>