force-app/main/default/objects/Interface_Parameters__mdt/fields/Header_Token__c.field-meta.xml
<CustomField>
    <fullName>Header_Token__c</fullName>
    <description>Field to store the header token of the interface</description>
    <label>Header Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>