force-app/main/default/objects/Interface_Parameters__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Sales force Named Credential for Integration</description>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>