force-app/main/default/objects/Interface_Parameters__mdt/listViews/production.listView-meta.xml
<ListView>
    <fullName>production</fullName>
    <columns>MasterLabel</columns>
    <columns>Named_Credential__c</columns>
    <columns>Endpoint__c</columns>
    <columns>ApiKey__c</columns>
    <columns>BearerToken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>notContain</operation>
        <value>SANDBOX</value>
    </filters>
    <label>production</label>
    <language>en_US</language>
</ListView>