force-app/main/default/objects/Interface_Parameters__mdt/listViews/sandbox.listView-meta.xml
<ListView>
    <fullName>sandbox</fullName>
    <columns>MasterLabel</columns>
    <columns>Named_Credential__c</columns>
    <columns>Endpoint__c</columns>
    <columns>ApiKey__c</columns>
    <columns>BearerToken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>SANDBOX</value>
    </filters>
    <label>sandbox</label>
    <language>en_US</language>
</ListView>